# 0016-skf-mock

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  projectplan.md
.cargo/: config.toml
.github/workflows/: release.yml
docs/: api.html  config.html  error-codes.md  guide.html  index.html  mPlugin-integration.md
src/: error_code.rs  lib.rs  types.rs
src/config/: mock_config.rs  mod.rs
src/crypto/: mod.rs  sm2_ops.rs  sm3_ops.rs  sm4_ops.rs
src/ffi/: app_ffi.rs  container_ffi.rs  crypto_ffi.rs  device_ffi.rs  helpers.rs  mod.rs  stub_ffi.rs
src/key_mgr/: context.rs  mod.rs
src/skf_impl/: application.rs  container.rs  device.rs  ecc.rs  hash.rs  mod.rs  symmetric.rs
tests/: integration_test.rs
