[package]
name = "skf-mock"
version = "0.1.0"
edition = "2021"

[lib]
name = "skf_mock"
crate-type = ["cdylib", "rlib"]

[dependencies]
libsmx = "0.3"
rand = "0.8"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
hex = "0.4"
